crates/forge-template/tests/snapshots/snapshot_tests__dto__create_product_category_dto_dto_ts.snap
---
source: crates/forge-template/tests/snapshot_tests.rs
expression: file.contents
---
export class CreateProductCategoryDtoDto {
  // TODO: define DTO properties
}
