crates/forge-template/tests/snapshots/snapshot_tests__dto__products_dto_ts.snap
---
source: crates/forge-template/tests/snapshot_tests.rs
expression: file.contents
---
export class ProductsDto {
  // TODO: define DTO properties
}
